# learning-rust

./: .gitignore  Cargo.toml  README.md
adder/: Cargo.toml
adder/src/: lib.rs
guess/: Cargo.toml
guess/src/: main.rs
hello/: Cargo.toml
hello_world/: Cargo.toml
src/: error.rs  error_handling.rs  http.rs  io.rs  lib.rs  logging.rs  main.rs  math_service.rs  math_service_test.rs  serialization.rs  shell.rs
src/math/: math_service.rs  math_service_tests.rs  mod.rs
src/oop/: animal.rs  mod.rs  rectangle.rs
