[package]
name = "learning_rust"
version = "0.2.0"
authors = ["freemanke <freemanke@qq.com>"]
edition = "2018"
license = "MIT"
documentation = "https://freemanke.com"
homepage = "https://freemanke.com"
repository = "https://github.com/freemanke/learning-rust.git"
description = "Learning Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
reqwest = "0.12.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
env_logger = "0.11.6"
